--- a/src/template.html
+++ b/src/template.html
@@ -215,7 +215,7 @@
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
+            href="arunram.9215@gmail.com"
             >Call to Action</a
           >
         </div>
@@ -230,16 +230,16 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
+          <a href="https://www.instagram.com/arun_dhaas1/" target="_blank">
+            <i class="fa fa-instagram fa-inverse"></i>
+          </a>
+          <a href="https://twitter.com/arundhaas1" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/arun-r-ba067620a/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/arundhaas1" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -248,33 +248,13 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Template developed by
-          <a href="https://github.com/cobidev" target="_blank"
-            >Jacobo Martínez</a
+          © 2021 - Developed by
+          <a href="https://github.com/arundhaas1" target="_blank"
+            >Arun Dhas</a
           >
         </p>
 
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
+       
       </div>
     </footer>
     <!-- /END Footer Section -->
