--- a/src/template.html
+++ b/src/template.html
@@ -215,7 +215,7 @@
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="arunram.9215@gmail.com"
+            href="mailto:arunram.9215@gmail.com"
             >Call to Action</a
           >
         </div>
