--- a/src/template.html
+++ b/src/template.html
@@ -233,7 +233,7 @@
           <a href="https://www.instagram.com/arun_dhaas1/" target="_blank">
             <i class="fa fa-instagram fa-inverse"></i>
           </a>
-          <a href="https://twitter.com/arundhaas1" target="_blank">
+          <a href="https://twitter.com/Arun_dhaas1" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
           <a href="https://www.linkedin.com/in/arun-r-ba067620a/" target="_blank">
