--- a/src/template.html
+++ b/src/template.html
@@ -230,10 +230,10 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="https://www.instagram.com/arun_dhaas1/" target="_blank">
+          <a href="https://www.instagram.com/arun_dhaas/" target="_blank">
             <i class="fa fa-instagram fa-inverse"></i>
           </a>
-          <a href="https://twitter.com/Arun_dhaas1" target="_blank">
+          <a href="https://twitter.com/Arundhaas" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
           <a href="https://www.linkedin.com/in/arun-r-ba067620a/" target="_blank">
