--- a/src/template.html
+++ b/src/template.html
@@ -80,20 +80,20 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Dark-Moon(Weather)</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Access current weather data for any location on Earth including over 200,000 cities! 
+                    and process weather data from different sources such as global and local weather 
+                    models, satellites, radars and a vast network of weather stations.
+                    This is expecially for mobile devices.
+                    Enjoy user experience!!!
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://eager-sinoussi-285e07.netlify.app/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Weather-Mobile">
                   Source Code
                 </a>
               </div>
@@ -102,7 +102,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/project1.jpeg" />
                   </div>
                 </a>
               </div>
