--- a/src/template.html
+++ b/src/template.html
@@ -46,7 +46,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="./assets/Arun.jpeg"
                 alt="Profile Image"
               />
             </div>
