--- a/src/template.html
+++ b/src/template.html
@@ -129,7 +129,8 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/amazon.jpg" />
+                    <img class="img-fluid" src="./assets/amazon1.png" />
+                    <img class="img-fluid" src="./assets/amazon2.png" />
                   </div>
                 </a>
               </div>
