--- a/src/template.html
+++ b/src/template.html
@@ -28,7 +28,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Arun</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a Front-End Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -170,8 +170,8 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Projects</h2>
-
+          <!-- <h2 class="section-title dark-blue-text">Projects</h2> -->
+<!-- 
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
@@ -201,9 +201,9 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
  
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">EMPORIUM(AMAZON-CLONE)</h3>
@@ -229,9 +229,9 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
   
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">M-DRUG(SPOTIFY-CLONE)</h3>
@@ -256,7 +256,7 @@
                 </a>
               </div>
             </div>
-          </div>    
+          </div>     -->
         
         </div>
       </div>
