--- a/src/template.html
+++ b/src/template.html
@@ -54,11 +54,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                Hi! I am Arun, a Front-End Web developer focused on Crafting great Web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into Web design. I enjoy creating beautifully designed, intuitive and functional websites.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                I'm a Hard working and dedicated Professional Front-End Developer user interface Designer with a keen eye for detail, and a determination to deliver the very Highest quality. I am Motivated, Enthusiastic and well organised, with a keen eye for beautiful Design, Primarily based around user Interfaces.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="">
@@ -277,6 +276,7 @@
       </div>
     </section>
 
+    
 
     <footer class="footer navbar-static-bottom">
       <div class="container">
