--- a/src/template.html
+++ b/src/template.html
@@ -110,7 +110,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">EMPORIUM(AMAZON-CLONE)</h3>
+                <h3 class="project-wrapper__text-title">Emporium(Amazon-Clone)</h3>
                 <div>
                   <p class="mb-4">
                     It is an Amazon-Clone website.It works on Firebase Auntentication ,Anyone can Login this Website.You can able to add Products to Carts and even go to Payment Page.Also, You can able to see the Total Price of Products selected.(!!!ZOOM IN FOR 75% FOR BEST EXPERIENCE AND NOT SUITABLE FOR MOBILE DEVICES!!!)
@@ -138,7 +138,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">M-DRUG(SPOTIFY-CLONE)</h3>
+                <h3 class="project-wrapper__text-title">M-Drug(Spotify-Clone)</h3>
                 <div>
                   <p class="mb-4">
                    M-Drugs is an Spotify-Clone App,Anyone can able to see the Playlists and even see the User details in it .It is an User Friendly website,and Fully Responsive.You can only able to Hear Songs,by Only having a Spotify Premium Account (!!!ENJOY USER EXPERIENCE !!!).
@@ -170,23 +170,20 @@
       <div class="container">
         <div class="project-wrapper">
           <!-- <h2 class="section-title dark-blue-text">Projects</h2> -->
-<!-- 
+
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Dark-Moon(Weather)</h3>
+                <h3 class="project-wrapper__text-title">Disney Plus</h3>
                 <div>
                   <p class="mb-4">
-                    Access current weather data for any location on Earth including over 200,000 cities! 
-                    and process weather data from different sources such as global and local weather 
-                    models, satellites, radars and a vast network of weather stations.
-                    Enjoy user experience(!!!THIS IS EXPECIALLY FOR MOBILE DEVICES!!!)
+                    It is an Completely Responsive website suitable for All the Devices.It works on the Firebase Google Auethentication system.You can see Fantastic Design and Animation in this Website.This gives Similar Experience of the original Disney + .Enjoy User Experience!! 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://eager-sinoussi-285e07.netlify.app/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://flamboyant-wozniak-03a3fa.netlify.app/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Weather-Mobile">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/DISNEY-CLONE">
                   Source Code
                 </a>
               </div>
@@ -195,12 +192,12 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project1.jpeg" />
+                    <img class="img-fluid" src="./assets/Disney.png" />
                   </div>
                 </a>
               </div>
             </div>
-          </div> -->
+          </div>
  
           <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
