--- a/src/template.html
+++ b/src/template.html
@@ -98,7 +98,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://eager-sinoussi-285e07.netlify.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/project1.jpeg" />
                   </div>
@@ -110,7 +110,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Emporium(Amazon-Clone)</h3>
+                <h3 class="project-wrapper__text-title">Amazon</h3>
                 <div>
                   <p class="mb-4">
                     It is an Amazon-Clone website.It works on Firebase Auntentication ,Anyone can Login this Website.You can able to add Products to Carts and even go to Payment Page.Also, You can able to see the Total Price of Products selected.(!!!ZOOM IN FOR 75% FOR BEST EXPERIENCE AND NOT SUITABLE FOR MOBILE DEVICES!!!)
@@ -126,7 +126,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://admiring-cray-aa19c3.netlify.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/amazon2.png" />
                   </div>
@@ -138,7 +138,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">M-Drug(Spotify-Clone)</h3>
+                <h3 class="project-wrapper__text-title">Spotify</h3>
                 <div>
                   <p class="mb-4">
                    M-Drugs is an Spotify-Clone App,Anyone can able to see the Playlists and even see the User details in it .It is an User Friendly website,and Fully Responsive.You can only able to Hear Songs,by Only having a Spotify Premium Account (!!!ENJOY USER EXPERIENCE !!!).
@@ -154,7 +154,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://compassionate-archimedes-48c057.netlify.app" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/spotify2 (2).png" />
                 </a>
@@ -190,7 +190,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://flamboyant-wozniak-03a3fa.netlify.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/Disney.png" />
                   </div>
