--- a/src/template.html
+++ b/src/template.html
@@ -199,33 +199,33 @@
             </div>
           </div>
  
-          <!-- <div class="row">
+          <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">EMPORIUM(AMAZON-CLONE)</h3>
+                <h3 class="project-wrapper__text-title">Messenger</h3>
                 <div>
                   <p class="mb-4">
-                    It is an Amazon-Clone website.It works on Firebase Auntentication ,Anyone can Login this Website.You can able to add Products to Carts and even go to Payment Page.Also, You can able to see the Total Price of Products selected.(!!!ZOOM IN FOR 75% FOR BEST EXPERIENCE AND NOT SUITABLE FOR MOBILE DEVICES!!!)
+                    Messenger is an Fully Responsive website.You can able to use in both the Mobile devices and also in Desktop.It works on the Firebase Database system.It stores data in it,You can able to Chat with any one in this website.Enjoy user Experience!!!
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://admiring-cray-aa19c3.netlify.app/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://vigorous-raman-02ef88.netlify.app/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Emporium">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Messenger-Clone">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://vigorous-raman-02ef88.netlify.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/amazon2.png" />
+                    <img class="img-fluid" src="./assets/Messenger.png" />
                   </div>
                 </a>
               </div>
             </div>
-          </div> -->
+          </div>
   
           <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
