--- a/src/template.html
+++ b/src/template.html
@@ -85,7 +85,7 @@
                     Access current weather data for any location on Earth including over 200,000 cities! 
                     and process weather data from different sources such as global and local weather 
                     models, satellites, radars and a vast network of weather stations.
-                    Enjoy user experience(!!!THIS IS EXPECIALLY FOR MOBILE DEVICES!!!)
+                    Enjoy user experience.It is Resposive but Most suitable for Mobile Devices!!!
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://eager-sinoussi-285e07.netlify.app/">
@@ -113,7 +113,7 @@
                 <h3 class="project-wrapper__text-title">Amazon</h3>
                 <div>
                   <p class="mb-4">
-                    It is an Amazon-Clone website.It works on Firebase Auntentication ,Anyone can Login this Website.You can able to add Products to Carts and even go to Payment Page.Also, You can able to see the Total Price of Products selected.(!!!ZOOM IN FOR 75% FOR BEST EXPERIENCE AND NOT SUITABLE FOR MOBILE DEVICES!!!)
+                    It is an Amazon-Clone website.It works on Firebase Auntentication ,Anyone can Login this Website.You can able to add Products to Carts and even go to Payment Page.Also, You can able to see the Total Price of Products selected.Zoom Out for 75% for best Experience!!!
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://admiring-cray-aa19c3.netlify.app/">
@@ -141,7 +141,7 @@
                 <h3 class="project-wrapper__text-title">Spotify</h3>
                 <div>
                   <p class="mb-4">
-                   M-Drugs is an Spotify-Clone App,Anyone can able to see the Playlists and even see the User details in it .It is an User Friendly website,and Fully Responsive.You can only able to Hear Songs,by Only having a Spotify Premium Account (!!!ENJOY USER EXPERIENCE !!!).
+                   M-Drugs is an Spotify-Clone App,Anyone can able to see the Playlists and even see the User details in it .It is an User Friendly website,and Fully Responsive.You can only able to Hear Songs,by Only having a Spotify Premium Account.Zoom Out for 75% for best Experience!!!
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://compassionate-archimedes-48c057.netlify.app">
@@ -167,7 +167,7 @@
     </section>
 
 
-    
+
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
