--- a/src/template.html
+++ b/src/template.html
@@ -267,33 +267,33 @@
     <div class="project-wrapper">
       <!-- <h2 class="section-title dark-blue-text">Projects</h2> -->
 
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-lg-4 col-sm-12">
           <div class="project-wrapper__text">
-            <h3 class="project-wrapper__text-title">Disney Plus</h3>
+            <h3 class="project-wrapper__text-title">Netflix</h3>
             <div>
               <p class="mb-4">
-                It is an Completely Responsive website suitable for All the Devices.It works on the Firebase Google Auethentication system.You can see Fantastic Design and Animation in this Website.This gives Similar Experience of the original Disney + .Enjoy User Experience!! 
+                It is an Netflix Clone website.The movies are shown from the IMDB API .The Autentication is working by using the Firebase Autentication System.It has both the Login and the LogOut Facility.Enjoy user Experience!!!
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://flamboyant-wozniak-03a3fa.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://goofy-swirles-acbb61.netlify.app/">
               See Live
             </a>
-            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/DISNEY-CLONE">
+            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Netlifx-Clone">
               Source Code
             </a>
           </div>
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://flamboyant-wozniak-03a3fa.netlify.app/" target="_blank">
+            <a href="https://goofy-swirles-acbb61.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./assets/Disney.png" />
+                <img class="img-fluid" src="./assets/Netflix.png" />
               </div>
             </a>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <!-- <div class="row">
         <div class="col-lg-4 col-sm-12">
