--- a/src/template.html
+++ b/src/template.html
@@ -295,33 +295,33 @@
         </div>
       </div>
 
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-lg-4 col-sm-12">
           <div class="project-wrapper__text">
-            <h3 class="project-wrapper__text-title">Messenger</h3>
+            <h3 class="project-wrapper__text-title">Whatsapp</h3>
             <div>
               <p class="mb-4">
-                Messenger is an Fully Responsive website.You can able to use in both the Mobile devices and also in Desktop.It works on the Firebase Database system.It stores data in it,You can able to Chat with any one in this website.Enjoy user Experience!!!
+               It is an Whatsapp Clone website.The login Functionality works on the Firebase authentication system.It lokks similar to the original Whatsapp.You can also able to chat in the pre-defined groups.Enjoy user Experience!!!
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://vigorous-raman-02ef88.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://dreamy-swirles-bc4981.netlify.app/">
               See Live
             </a>
-            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Messenger-Clone">
+            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Whatsapp">
               Source Code
             </a>
           </div>
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://vigorous-raman-02ef88.netlify.app/" target="_blank">
+            <a href="https://dreamy-swirles-bc4981.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./assets/Messenger.png" />
+                <img class="img-fluid" src="./assets/Whatsapp.png" />
               </div>
             </a>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <!-- <div class="row">
         <div class="col-lg-4 col-sm-12">
