--- a/src/template.html
+++ b/src/template.html
@@ -301,7 +301,7 @@
             <h3 class="project-wrapper__text-title">Whatsapp</h3>
             <div>
               <p class="mb-4">
-               It is an Whatsapp Clone website.The login Functionality works on the Firebase authentication system.It lokks similar to the original Whatsapp.You can also able to chat in the pre-defined groups.Enjoy user Experience!!!
+               It is an Whatsapp Clone website.The login Functionality works on the Firebase authentication system.It lokks similar to the original Whatsapp.You can also able to chat in the pre-defined groups.It works on both Mobiles and the desktop devices.Enjoy user Experience!!!
               </p>
             </div>
             <a target="_blank" class="cta-btn cta-btn--hero" href="https://dreamy-swirles-bc4981.netlify.app/">
