--- a/src/template.html
+++ b/src/template.html
@@ -323,6 +323,100 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-lg-4 col-sm-12">
+          <div class="project-wrapper__text">
+            <h3 class="project-wrapper__text-title">College Website</h3>
+            <div>
+              <p class="mb-4">
+                It is an College Details updating Website.It is easy to use in both the Mobile devices and the Desktop devices.It is the most Responsive Suitable for any Users.Enjpy User Experience!!!
+              </p>
+            </div>
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://infallible-aryabhata-ff6849.netlify.app/">
+              See Live
+            </a>
+            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Acadamics">
+              Source Code
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-8 col-sm-12">
+          <div class="project-wrapper__image">
+            <a href="https://infallible-aryabhata-ff6849.netlify.app/" target="_blank">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./assets/Acadamics.png" />
+            </a>
+          </div>
+        </div>
+      </div>    
+    
+    </div>
+  </div>
+</section>
+<!-- COPY -->
+
+<!-- COPY -->
+<section id="projects">
+  <div class="container">
+    <div class="project-wrapper">
+      <!-- <h2 class="section-title dark-blue-text">Projects</h2> -->
+
+      <!-- <div class="row">
+        <div class="col-lg-4 col-sm-12">
+          <div class="project-wrapper__text">
+            <h3 class="project-wrapper__text-title">Netflix</h3>
+            <div>
+              <p class="mb-4">
+                It is an Netflix Clone website.The movies are shown from the IMDB API .The Autentication is working by using the Firebase Autentication System.It has both the Login and the LogOut Facility.Enjoy user Experience!!!
+              </p>
+            </div>
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://goofy-swirles-acbb61.netlify.app/">
+              See Live
+            </a>
+            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Netlifx-Clone">
+              Source Code
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-8 col-sm-12">
+          <div class="project-wrapper__image">
+            <a href="https://goofy-swirles-acbb61.netlify.app/" target="_blank">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./assets/Netflix.png" />
+              </div>
+            </a>
+          </div>
+        </div>
+      </div> -->
+<!-- 
+      <div class="row">
+        <div class="col-lg-4 col-sm-12">
+          <div class="project-wrapper__text">
+            <h3 class="project-wrapper__text-title">Whatsapp</h3>
+            <div>
+              <p class="mb-4">
+               It is an Whatsapp Clone website.The login Functionality works on the Firebase authentication system.It lokks similar to the original Whatsapp.You can also able to chat in the pre-defined groups.It works on both Mobiles and the desktop devices.Enjoy user Experience!!!
+              </p>
+            </div>
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://dreamy-swirles-bc4981.netlify.app/">
+              See Live
+            </a>
+            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Whatsapp">
+              Source Code
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-8 col-sm-12">
+          <div class="project-wrapper__image">
+            <a href="https://dreamy-swirles-bc4981.netlify.app/" target="_blank">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./assets/Whatsapp.png" />
+              </div>
+            </a>
+          </div>
+        </div>
+      </div> -->
+
       <!-- <div class="row">
         <div class="col-lg-4 col-sm-12">
           <div class="project-wrapper__text">
