--- a/src/template.html
+++ b/src/template.html
@@ -57,7 +57,7 @@
                 Hi! I am Arun, a Front-End Web developer focused on Crafting great Web experiences. Designing and Coding have been my passion since the days I started working with computers but I found myself into Web design. I enjoy creating beautifully designed, intuitive and functional websites.
               </p>
               <p class="about-wrapper__info-text">
-                I'm a Hard working and dedicated Professional Front-End Developer user interface Designer with a keen eye for detail, and a determination to deliver the very Highest quality. I am Motivated, Enthusiastic and well organised, with a keen eye for beautiful Design, Primarily based around user Interfaces.I am expert in HTML5,CSS3,JavaScript,React,Styled Components.
+                I'm a Hard working and dedicated Professional Front-End Developer user interface Designer with a keen eye for detail, and a determination to deliver the very Highest quality. I am Motivated, Enthusiastic and well organised, with a keen eye for beautiful Design, Primarily based around user Interfaces.I am Good in HTML5 , CSS3 , JavaScript , React.js and Styled Components.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="">
@@ -74,7 +74,7 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Projects</h2>
+          <h2 class="section-title dark-blue-text">React Projects</h2>
 
           <div class="row">
             <div class="col-lg-4 col-sm-12">
