--- a/src/template.html
+++ b/src/template.html
@@ -304,7 +304,7 @@
                It is an Whatsapp Clone website.The login Functionality works on the Firebase authentication system.It lokks similar to the original Whatsapp.You can also able to chat in the pre-defined groups.It works on both Mobiles and the desktop devices.Enjoy user Experience!!!
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://dreamy-swirles-bc4981.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://whatsappnew.netlify.app/">
               See Live
             </a>
             <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Whatsapp">
@@ -314,7 +314,7 @@
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://dreamy-swirles-bc4981.netlify.app/" target="_blank">
+            <a href="https://whatsappnew.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./assets/Whatsapp.png" />
               </div>
