--- a/src/template.html
+++ b/src/template.html
@@ -332,7 +332,7 @@
                 It is an College Details updating Website.It is easy to use in both the Mobile devices and the Desktop devices.It is the most Responsive Suitable for any Users.Enjpy User Experience!!!
               </p>
             </div>
-            <a target="_blank" class="cta-btn cta-btn--hero" href="https://modest-hopper-abff98.netlify.app/">
+            <a target="_blank" class="cta-btn cta-btn--hero" href="https://gcesalem.netlify.app/">
               See Live
             </a>
             <a target="_blank" class="cta-btn text-color-main" href="https://github.com/arundhaas1/Acadamics">
@@ -342,7 +342,7 @@
         </div>
         <div class="col-lg-8 col-sm-12">
           <div class="project-wrapper__image">
-            <a href="https://modest-hopper-abff98.netlify.app/" target="_blank">
+            <a href="https://gcesalem.netlify.app/" target="_blank">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./assets/Acadamics.png" />
             </a>
